fix: nullpointer